--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "knex": "^3.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "sqlite3": "^5.1.7",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@tailwindcss/vite": "^4.1.13",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.3.1",
+    "@types/node": "^24.5.2",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.2",
@@ -39,5 +42,18 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.5"
-  }
+  },
+  "description": "A full-stack e-commerce web application for a botanical-inspired cake shop.   Built with **React, TypeScript, Node.js, Express, and TailwindCSS**.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Irina-Kostina/cake-shop.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Irina-Kostina/cake-shop/issues"
+  },
+  "homepage": "https://github.com/Irina-Kostina/cake-shop#readme"
 }
